# birthday-bot

./: .gitignore  README.md  birthdaybot.service  pyproject.toml  token.json.sample
birthdaybot/: __init__.py  __main__.py  bot.py  constants.py  helpers.py  models.py
birthdaybot/cogs/: __init__.py  birthday.py  event.py
birthdaybot/tasks/: scheduler.py
discordbottemplate/: __init__.py  __main__.py  bot.py  models.py
discordbottemplate/cogs/: __init__.py  example_cog.py
migrations/: alter_unique_constraints.py  test_add_and_remove_column.py
